--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -3,11 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_graph.xml"
-    app:startDestination="@id/basic">
+    app:startDestination="@id/login">
 
     <fragment
-        android:id="@+id/basic"
-        android:name="dev.forcetower.ember.view.main.MainFragment"
+        android:id="@+id/login"
+        android:name="dev.forcetower.ember.view.login.LoginFragment"
         android:label="BasicFragment"
-        tools:layout="@layout/fragment_main"/>
+        tools:layout="@layout/fragment_login"/>
 </navigation>
